--- a/index.html
+++ b/index.html
@@ -244,6 +244,55 @@
         </div>
       </div>
     </div>
+    <div class="testimonials">
+      <div class="container">
+        <h3>Testimonials</h3>
+        <div class="content">
+          <div class="box">
+            <p>
+              Iam very happy with the product its amazing and i recieve it very
+              fast and the price was amazing.
+            </p>
+            <h4>Ahmed Mosaad</h4>
+            <p>CEO At Company</p>
+          </div>
+          <div class="box">
+            <p>
+              Iam very happy with the product its amazing and i recieve it very
+              fast and the price was amazing.
+            </p>
+            <h4>Mohamed Ibrahim</h4>
+            <p>CEO At Company</p>
+          </div>
+          <div class="box">
+            <p>
+              Iam very happy with the product its amazing and i recieve it very
+              fast and the price was amazing.
+            </p>
+            <h4>Sherief Ashraf</h4>
+            <p>CEO At Company</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="contact">
+      <h3>Contact Us</h3>
+      <div class="container">
+        <form action="">
+          <div class="left">
+            <input type="text" placeholder="Your Name" />
+            <input type="text" placeholder="Your Phone" />
+            <input type="email" placeholder="Your Email" />
+            <input type="text" placeholder="Subject" />
+          </div>
+          <div class="right">
+            <textarea name="message" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send" />
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="footer">Created By Me</div>
     <script src="js/main.js"></script>
   </body>
 </html>
