--- a/index.html
+++ b/index.html
@@ -56,10 +56,13 @@
         <div class="header">
           <div class="logo">Special Design</div>
           <ul>
-            <li><a href="#" class="active">About</a></li>
-            <li><a href="#">Service</a></li>
-            <li><a href="#">Product</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#about" class="active">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#gallery">Gallery</a></li>
+            <li><a href="#timeline">Timeline</a></li>
+            <li><a href="#features">Features</a></li>
+            <li><a href="#testimonials">Testimonials</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
         <div class="intro">
@@ -71,7 +74,7 @@
         </div>
       </div>
     </div>
-    <div class="about">
+    <div class="about" id="about">
       <div class="container">
         <div class="text">
           <h1>About Us</h1>
@@ -87,7 +90,7 @@
         </div>
       </div>
     </div>
-    <div class="skills">
+    <div class="skills" id="skills">
       <div class="container">
         <h1>Our Skills</h1>
         <div class="skill">
@@ -130,7 +133,7 @@
         </div>
       </div>
     </div>
-    <div class="gallery">
+    <div class="gallery" id="gallery">
       <div class="container">
         <h1>Our Gallery</h1>
         <div class="images-box">
@@ -147,7 +150,7 @@
         </div>
       </div>
     </div>
-    <div class="timeline">
+    <div class="timeline" id="timeline">
       <div class="container">
         <div class="timeline-content">
           <div class="year">2018</div>
@@ -191,7 +194,7 @@
         </div>
       </div>
     </div>
-    <div class="features">
+    <div class="features" id="features">
       <h1>Our Features</h1>
       <div class="container">
         <div class="box">
@@ -244,7 +247,7 @@
         </div>
       </div>
     </div>
-    <div class="testimonials">
+    <div class="testimonials" id="testimonials">
       <div class="container">
         <h3>Testimonials</h3>
         <div class="content">
@@ -275,7 +278,7 @@
         </div>
       </div>
     </div>
-    <div class="contact">
+    <div class="contact" id="contact">
       <h3>Contact Us</h3>
       <div class="container">
         <form action="">
